<resources>
    <string name="app_name">PosterGo</string>
    <string name="AR_button">AR view</string>
    <string name="chat_button">Chatroom</string>
    <string name="recomm_button">Recommendations</string>
    <string name="back">back</string>
    <string name="message">Message</string>
    <string name="your_message_here">Your message goes here</string>
    <string name="example_message">eg. Hi!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send.</string>
    <string name="your_UI">Your UI appears here</string>

    <string name="your_message">Your Message:</string>
    <string name="Error">error will be displayed here</string>
    <string name="get_message">Get Message</string>


    <string name="user_name">User</string>
    <string name="get_updates">Update</string>
    <string name="show_recomm">Show Recommendations</string>


    <string name="poster_description">POSTER</string>
    <string name="suggestions">Tap the button for suggested movies!</string>
    <string name="chatroom_name">Movie: Joker</string>
</resources>
